--- a/day10/basic-event-handling/task-1/index.html
+++ b/day10/basic-event-handling/task-1/index.html
@@ -1,1 +1,15 @@
-
+<!-- DAy 10: Event Handling
+Tasks/Actvities
+Task 1: Add a clcik event to a button that changes the text content of a paragraph -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 id="heading">Java Course</h1>
+    <script src="./script.js"></script>
+</body>
+</html>
