--- a/day10/basic-event-handling/task2/index.html
+++ b/day10/basic-event-handling/task2/index.html
@@ -1,1 +1,13 @@
-
+<!-- Task 2: Add a double-click event listener to an image that toggles its visibility. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="./header-image.jpg" width="400px" alt="">
+    <script src="./script.js"></script>
+</body>
+</html>
