--- a/day10/Mouse-event/task3/index.html
+++ b/day10/Mouse-event/task3/index.html
@@ -1,1 +1,17 @@
-
+<!-- Activity 2: Mouse Events
+Task 3: Add a mouseover event listener to an element that changes its background color -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container" style="background-color: brown;">
+        <h1>hello, there</h1>
+        <p>Change the background using mouseover event</p>
+    </div>
+    <script src="./script.js"></script>
+</body>
+</html>
