--- a/day10/Mouse-event/task4/index.html
+++ b/day10/Mouse-event/task4/index.html
@@ -1,1 +1,16 @@
-
+<!-- Task 4: Add a mouseout event listener to an element that resets its background color -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container" style="background-color: yellow;">
+        <h1>hello, there</h1>
+        <p>Change the background using mouseover event</p>
+    </div>
+    <script src="./script.js"></script>
+</body>
+</html>
