--- a/day10/keyborad-event/task5/index.html
+++ b/day10/keyborad-event/task5/index.html
@@ -1,1 +1,14 @@
-
+<!-- Activity 3: Keyboard Events
+Task 5: Add a keydown event listener to an input field that logs the key pressed to the console -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <input id="text-input" type="text" placeholder="Enter your fullname">
+    <script src="./script.js"></script>
+</body>
+</html>
