--- a/day10/keyborad-event/task6/index.html
+++ b/day10/keyborad-event/task6/index.html
@@ -1,1 +1,14 @@
-
+<!-- Task 6: Add a keyup event listener to an input field that display the current value in a paragraph -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <input id="text-input" type="text" placeholder="Enter your fullname">
+    <p id="para"></p>
+    <script src="./script.js"></script>
+</body>
+</html>
