--- a/day10/form-event/task7/index.html
+++ b/day10/form-event/task7/index.html
@@ -1,1 +1,19 @@
-
+<!-- Activity 4: Form Events
+Task 7: Add a submit event listener to a form that prevents the default submission and logs the form data to the console -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <form id="form" action="">
+        <input type="text" name="firstName" placeholder="Enter your first name">
+        <input type="text" name="lastName" placeholder="Enter your last name">
+        <input type="email" name="email" placeholder="Enter your email">
+        <input type="submit" value="submit">
+    </form>
+    <script src="./script.js"></script>
+</body>
+</html>
