--- a/day10/form-event/task8/index.html
+++ b/day10/form-event/task8/index.html
@@ -1,1 +1,19 @@
-
+<!-- Activity 4: Form Events
+Task8: Add a change event listener to select dropdown that displays the selected value in paragraph  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <select id="items">
+        <option value="Apple">Apple</option>
+        <option value="Banana">Banana</option>
+        <option value="guvua">guvua</option>
+    </select>
+    <p id="para"></p>
+    <script src="./script.js"></script>
+</body>
+</html>
