--- a/day10/Mouse-event/task4/index.html
+++ b/day10/Mouse-event/task4/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container" style="background-color: yellow;">
         <h1>hello, there</h1>
-        <p>Change the background using mouseover event</p>
+        <p>Change the background using mouseout event</p>
     </div>
     <script src="./script.js"></script>
 </body>
