--- a/03: Day3/activity1-if-else-statements/task1/index.html
+++ b/03: Day3/activity1-if-else-statements/task1/index.html
@@ -1,1 +1,13 @@
-
+<!-- Acrivity 1: if-else-statement
+task 1:Write a program to check if a number is positive, negative, or zero and log the result to the console -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script src="./script.js"></script>
+</body>
+</html>
