--- a/05:Day5/function/activity3-arrow-function/task5/index.html
+++ b/05:Day5/function/activity3-arrow-function/task5/index.html
@@ -1,6 +1,6 @@
-Activity 3: Arrow functions
-Task 5: Write an arrow function to calculate the sum of two numbers and return the result
-<!DOCTYPE html>
+<!-- Activity 3: Arrow functions
+Task 5: Write an arrow function to calculate the sum of two numbers and return the result -->
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
