--- a/08:Day8/ES6-Features/activity4-defaultParameters/task7/index.html
+++ b/08:Day8/ES6-Features/activity4-defaultParameters/task7/index.html
@@ -1,6 +1,6 @@
-Activity 4: Default Parameters
+<!-- Activity 4: Default Parameters
 Task 7: Write a function that takes two parameter and returns their product, with the second parameter 
-having a default value of 1. L og the result of calling this function with and without the second parameter.
+having a default value of 1. Log the result of calling this function with and without the second parameter. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
