--- a/08:Day8/ES6-Features/activity5-EnhancedObjectLiterals/task9/index.html
+++ b/08:Day8/ES6-Features/activity5-EnhancedObjectLiterals/task9/index.html
@@ -1,5 +1,5 @@
-Activity 5: Enhanced Obejct Literals
-Task 8: Use enhanced object literals to create an object with methods and properties and log the object to the console.
+<!-- Activity 5: Enhanced Obejct Literals
+Task 9:Create an obejct with computed property names based on variable and log the object to the console.  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
