--- a/09:Day9/Dom-Manipulation/activity1-selecting-manipulatigElements/task1/index.html
+++ b/09:Day9/Dom-Manipulation/activity1-selecting-manipulatigElements/task1/index.html
@@ -9,6 +9,7 @@ Task 1: Select an HTML elements by its ID and change its text content. -->
     <title>Document</title>
 </head>
 <body>
+    <h1 id="header">My website</h1>
     <script src="./script.js"></script>
 </body>
 </html>
