--- a/day12/activity1-error-handling/task1/index.html
+++ b/day12/activity1-error-handling/task1/index.html
@@ -1,6 +1,6 @@
-Day 12: Error Handling 
+<!-- Day 12: Error Handling 
 Activity: Basic Error Handling with Try-Catch. 
-Task 1: Write a function that intentionally throws an error and use a try-catch block to handle the error and log an appropriate message to the console. 
+Task 1: Write a function that intentionally throws an error and use a try-catch block to handle the error and log an appropriate message to the console.  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
