--- a/day 13/actvity-creatingExportingModules/task2/index.html
+++ b/day 13/actvity-creatingExportingModules/task2/index.html
@@ -1,6 +1,4 @@
-Day 13: Modules
-Activity1:Creating and Exporting Modules
-Task 1: Create a module that exports a function to add two numbers. Imports and use this module in another script. 
+<!-- Task 2:Create a module that exports an object representing a person with properties and methods.Imports and use this module in another script.  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
