--- a/day15/task1/index.html
+++ b/day15/task1/index.html
@@ -1,14 +1,14 @@
-/* Task 1: Write a function that returns another function, where the inner function accesses a variable from the outer function's scope.
-Call the inner function and log the result. */
-function outerFunction(){
-    let str='This string from outer function'
-    return  function innerFunction(){
-        console.log(`This string from inner functon`);
-        console.log(str);
-    }
-}
-// const innerfun1=outerFunction()()
-
-//another way
-const innnerFun2=outerFunction()
-innnerFun2()
+<!-- Day 15: Closures
+Activities 1: Understanding Closures
+Task 1: Write a function that returns another function, where the inner function accesses a variable from the outer function's scope.
+Call the inner function and log the result. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Class Definition</title>
+</head>
+<body>
+  <script src="./script.js"></script>
+</body>
